--- a/index.html
+++ b/index.html
@@ -7,6 +7,78 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div id="logo">
+            Header logo
+        </div>
+        <nav>
+            <ul>
+                <li>Header link</li>
+                <li>Header link</li>
+                <li>Header link</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero-section">
+            <h1>This website is awesome!</h1>
+            <p>
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+            </p>
+            <button>Sign up</button>
+            <div class="picture-container">
+                this is a placeholder for an image
+            </div>
+        </section>
+        <section id="info-section">
+            <h2>Some more information</h2>
+            <div class="info">
+                <div class="picture">
+
+                </div>
+                <div class="info-text">
+                    this is some subtext under illustration or an image
+                </div>
+            </div>
+            <div class="info">
+                <div class="picture">
+
+                </div>
+                <div class="info-text">
+                    this is some subtext under illustration or an image
+                </div>
+            </div>
+            <div class="info">
+                <div class="picture">
+
+                </div>
+                <div class="info-text">
+                    this is some subtext under illustration or an image
+                </div>
+            </div>
+            <div class="info">
+                <div class="picture">
+
+                </div>
+                <div class="info-text">
+                    this is some subtext under illustration or an image
+                </div>
+            </div>
+        </section>
+        <section id="quote-section">
+            <blockquote>
+                <p>Words can be like X-rays, if you use them properly—they'll go through anything. You read and you're pierced.</p>
+                <p>—Aldous Huxley, <cite>Brave New World</cite></p>
+            </blockquote>
+        </section>
+        <section id="cta-section">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right there!</p>
+            <button>Sign up</button>
+        </section>
+    </main>
+    <footer>
+        Copyright &#169; nemecro 2024
+    </footer>
 </body>
 </html>
