--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <nav>
             <ul>
-                <li>Header link</li>
-                <li>Header link</li>
-                <li>Header link</li>
+                <li><a href="#" class="nav-link">Header link</a></li>
+                <li><a href="#" class="nav-link">Header link</a></li>
+                <li><a href="#" class="nav-link">Header link</a></li>
             </ul>
         </nav>
     </header>
@@ -72,9 +72,11 @@
             </blockquote>
         </section>
         <section id="cta-section">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right there!</p>
-            <button>Sign up</button>
+            <div class="cta-container">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right there!</p>
+                <button>Sign up</button>
+            </div>
         </section>
     </main>
     <footer>
