--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
     </header>
     <main>
         <section id="hero-section">
-            <h1>This website is awesome!</h1>
-            <p>
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-            </p>
-            <button>Sign up</button>
-            <div class="picture-container">
-                this is a placeholder for an image
+            <div class="left">
+                <h1>This website is awesome!</h1>
+                <p class="subtext">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                </p>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="right">
+                <div class="picture-container">
+                    this is a placeholder for an image
+                </div>
             </div>
         </section>
         <section id="info-section">
