--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section id="quote-section">
             <blockquote>
                 <p>Words can be like X-rays, if you use them properly—they'll go through anything. You read and you're pierced.</p>
-                <p>—Aldous Huxley, <cite>Brave New World</cite></p>
+                <p class="credit">—Aldous Huxley, <cite>Brave New World</cite></p>
             </blockquote>
         </section>
         <section id="cta-section">
