feat: style cta

--- a/index.html
+++ b/index.html
@@ -79,9 +79,13 @@
         </section>
         <section id="cta-section">
             <div class="cta-container">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right there!</p>
-                <button>Sign up</button>
+                <div>
+                    <h3 id="cta-heading">Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right there!</p>
+                </div>
+                <div>
+                    <button id="cta-button">Sign up</button>
+                </div>
             </div>
         </section>
     </main>
